syntax = "proto3";

package routerclientpb;

option go_package = "git.jochum.dev/jo-micro/router/proto/routerclientpb;routerclientpb";

import "google/protobuf/empty.proto";

service RouterClientService {
    rpc Routes (google.protobuf.Empty) returns (RoutesReply) {}
}

message RoutesReply {
    message Route {
	    // isGlobal=True == no prefix route
        bool isGlobal = 1;
        string method = 2;
        string path = 3;
        string endpoint = 4;
        repeated string params = 5;
    }

    string routerURI = 1;
    repeated Route routes = 2;
}